--- a/podcasts-app/src/webapp/WEB-INF/web.xml
+++ b/podcasts-app/src/webapp/WEB-INF/web.xml
@@ -2,8 +2,8 @@
 <web-app id="WebApp_9" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" 
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-    <display-name>sakai-podcaster</display-name>
-    <description>Sakai Podcaster Tool</description>
+    <display-name>sakai-podcasts</display-name>
+    <description>Sakai Podcasts Tool</description>
 
     <context-param>
         <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
@@ -35,11 +35,11 @@
 		 it is JsfTool that will intercept requests and grap the
 		 correct information -->
      <servlet>
-      <servlet-name>sakai.podcaster</servlet-name>
+      <servlet-name>sakai.podcasts</servlet-name>
       <servlet-class>org.sakaiproject.jsf.util.JsfTool</servlet-class>
         <init-param>
             <param-name>path</param-name>
-            <param-value>/podcaster</param-value>
+            <param-value>/podcasts</param-value>
         </init-param>
       <load-on-startup>2</load-on-startup>
         <init-param>
@@ -62,7 +62,7 @@
   	   usually all 3 dispachers values kept -->
    <filter-mapping>
         <filter-name>org.sakaiproject.util.RequestFilter</filter-name>
-        <servlet-name>sakai.podcaster</servlet-name>
+        <servlet-name>sakai.podcasts</servlet-name>
         <dispatcher>REQUEST</dispatcher>
         <dispatcher>FORWARD</dispatcher>
         <dispatcher>INCLUDE</dispatcher>
@@ -80,7 +80,7 @@
      </filter>
   <filter-mapping>
         <filter-name>sakai.request</filter-name>
-        <servlet-name>podcaster</servlet-name>
+        <servlet-name>podcasts</servlet-name>
         <dispatcher>REQUEST</dispatcher>
         <dispatcher>FORWARD</dispatcher>
         <dispatcher>INCLUDE</dispatcher>
