--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="protopod-app/src/java"/>
+	<classpathentry kind="src" path="ppodcasts-app/src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="var" path="MAVEN_REPO/sakaiproject/jars/sakai-tool-api-dev.jar"/>
+	<classpathentry kind="src" path="org.sakaiproject.component.app.podcasts"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
