--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/event-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/util-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/util-util"/>
+	<classpathentry kind="src" path="/component-api"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
