Add Eclipse dependency on authz-api and user-api
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14642 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/util-util"/>
 	<classpathentry kind="src" path="/component-api"/>
 	<classpathentry kind="src" path="/content-impl"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/authz-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/user-api"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
