--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="src" path="/content-impl"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/authz-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/user-api"/>
+	<classpathentry kind="var" path="MAVEN_REPO/rome/jars/rome-0.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
