Podfeed on the edge of working - will write to file. Wanted to put code in svn. TODO: fix path to servlet, getting output back to client (voilates loader constraints)
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14649 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/authz-api"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/user-api"/>
 	<classpathentry kind="var" path="MAVEN_REPO/rome/jars/rome-0.8.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/servletapi/jars/servletapi-2.4.jar"/>
+	<classpathentry kind="var" path="MYECLIPSE_SPRING_DATA_HOME/1.2/lib/spring-web.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
