Can now find siteID from URL
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14651 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/webapp/WEB-INF/web.xml
+++ b/podcasts-app/src/webapp/WEB-INF/web.xml
@@ -62,7 +62,7 @@
  
   <servlet-mapping>
     <servlet-name>RSSPodfeedServlet</servlet-name>
-    <url-pattern>/podcasts/RSSPodfeedServlet</url-pattern>
+    <url-pattern>/site/*</url-pattern>
   </servlet-mapping>
   
 	<!-- the RequestFilter works with JsfTool to intercept requests -->
