--- a/podcasts-app/src/webapp/WEB-INF/web.xml
+++ b/podcasts-app/src/webapp/WEB-INF/web.xml
@@ -53,7 +53,7 @@
    </servlet>
  
   <servlet>
-    <servlet-name>RSSPodfeedServlet</servlet-name>
+    <servlet-name>podcasts</servlet-name>
     <servlet-class>org.sakaiproject.tool.podcasts.RSSPodfeedServlet</servlet-class>
     <display-name>RSSPodfeedServlet</display-name>
     <description>This generates the actual Poddcast feed</description>
@@ -61,8 +61,8 @@
   </servlet>
  
   <servlet-mapping>
-    <servlet-name>RSSPodfeedServlet</servlet-name>
-    <url-pattern>/site/*</url-pattern>
+    <servlet-name>podcasts</servlet-name>
+    <url-pattern>/podfeed/*</url-pattern>
   </servlet-mapping>
   
 	<!-- the RequestFilter works with JsfTool to intercept requests -->
