add global feed info revise page
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14655 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/src/webapp/WEB-INF/web.xml
+++ b/podcasts-app/src/webapp/WEB-INF/web.xml
@@ -53,7 +53,7 @@
    </servlet>
  
   <servlet>
-    <servlet-name>podcasts</servlet-name>
+    <servlet-name>podfeed</servlet-name>
     <servlet-class>org.sakaiproject.tool.podcasts.RSSPodfeedServlet</servlet-class>
     <display-name>RSSPodfeedServlet</display-name>
     <description>This generates the actual Poddcast feed</description>
@@ -61,7 +61,7 @@
   </servlet>
  
   <servlet-mapping>
-    <servlet-name>podcasts</servlet-name>
+    <servlet-name>podfeed</servlet-name>
     <url-pattern>/podfeed/*</url-pattern>
   </servlet-mapping>
 
