auth out for now, feed working again
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@14669 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/.classpath
+++ b/.classpath
@@ -26,5 +26,7 @@
 	<classpathentry kind="var" path="MYECLIPSE_SPRING_DATA_HOME/1.2/lib/spring-web.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/email-api"/>
 	<classpathentry kind="lib" path="/Users/josephrodriguez/Desktop/itunes-0.3.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/dav"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/user-util"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
