--- a/podcasts-app/src/webapp/WEB-INF/web.xml
+++ b/podcasts-app/src/webapp/WEB-INF/web.xml
@@ -64,6 +64,10 @@
     <filter>
         <filter-name>org.sakaiproject.util.RequestFilter</filter-name>
         <filter-class>org.sakaiproject.util.RequestFilter</filter-class>
+		<init-param>
+			<param-name>upload.max</param-name>
+			<param-value>500</param-value>
+		</init-param>
     </filter>
 
   <!-- tells RequestFilter what can be done with your servlet
@@ -81,6 +85,10 @@
     <filter>
         <filter-name>sakai.request</filter-name>
         <filter-class>org.sakaiproject.util.RequestFilter</filter-class>
+		<init-param>
+			<param-name>upload.max</param-name>
+			<param-value>500</param-value>
+		</init-param>
 <!--        <init-param>
           <param-name>upload.enabled</param-name>
         	  <param-value>true</param-value>
@@ -98,6 +106,10 @@
     <filter>
         <filter-name>sakai.request</filter-name>
         <filter-class>org.sakaiproject.util.RequestFilter</filter-class>
+		<init-param>
+			<param-name>upload.max</param-name>
+			<param-value>500</param-value>
+		</init-param>
     </filter>
     <filter-mapping>
         <filter-name>sakai.request</filter-name>
