--- a/podcasts/pom.xml
+++ b/podcasts/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>sakai-jsf-sun-ri-tool</artifactId>
     <groupId>org.sakaiproject</groupId>
     <version>M2</version>
-    <relativePath>../../master/pom.xml</relativePath>
+    <relativePath>../../master/jsf-sun-tool/pom.xml</relativePath>
   </parent>
   <name>podcasts</name>
   <groupId>org.sakaiproject</groupId>
@@ -17,14 +17,6 @@
   <inceptionYear>2003</inceptionYear>
   <packaging>war</packaging>
   <dependencies>
-    <dependency>
-      
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-jsf-sun-ri-tool</artifactId>
-      <version>${sakai.version}</version>
-      <type>pom</type>
-      <scope>provided</scope>
-    </dependency>
     <dependency>
       
       <groupId>commons-logging</groupId>
@@ -197,6 +189,13 @@
       <version>2.6.2</version>
       <scope>provided</scope>
     </dependency>
+ <dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+      <version>2.0.2</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 <!-- needed so it will compile the java files,
 		process the properties bundles,
