--- a/.classpath
+++ b/.classpath
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="podcasts-api/src/java"/>
-	<classpathentry kind="src" path="podcasts-app/src/java"/>
-	<classpathentry kind="src" path="podcasts-impl/impl/src/java"/>
-	<classpathentry kind="src" path="/entity-api"/>
-	<classpathentry kind="var" path="MAVEN_REPO/jsf/jars/jsf-api-1.1.01.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/jsf/jars/jsf-impl-1.1.01.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/jspapi/jars/jsp-api-2.0.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/commons-fileupload/jars/commons-fileupload-1.1.1.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/content-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/site-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/tool-api"/>
-	<classpathentry kind="var" path="MAVEN_REPO/commons-logging/jars/commons-logging-1.0.4.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/event-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/util-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/util-util"/>
-	<classpathentry kind="src" path="/component-api"/>
-	<classpathentry kind="src" path="/content-impl"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/authz-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/user-api"/>
-	<classpathentry sourcepath="/MAVEN_REPO" kind="var" path="MAVEN_REPO/rome/jars/rome-0.8.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/servletapi/jars/servletapi-2.4.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/email-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/dav"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/user-util"/>
-	<classpathentry kind="var" path="MAVEN_REPO/rome/jars/itunes-0.3.jar"/>
-	<classpathentry kind="output" path="bin"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="src" path="podcasts-api/src/java"/>
+  <classpathentry kind="src" path="podcasts-app/src/java"/>
+  <classpathentry kind="src" path="podcasts-impl/impl/src/java"/>
+  <classpathentry kind="src" path="/entity-api"/>
+  <classpathentry kind="var" path="M2_REPO/jsf/jsf-api/1.1.01/jsf-api-1.1.01.jar"/>
+  <classpathentry kind="var" path="M2_REPO/jsf/jsf-impl/1.1.01/jsf-impl-1.1.01.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/servlet/jsp-api/2.0/jsp-api-2.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-fileupload/commons-fileupload/1.1.1/commons-fileupload-1.1.1.jar"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/content-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/site-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/tool-api"/>
+  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/event-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/util-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/util-util"/>
+  <classpathentry kind="src" path="/component-api"/>
+  <classpathentry kind="src" path="/content-impl"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/authz-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/user-api"/>
+  <classpathentry sourcepath="/MAVEN_REPO" kind="var" path="M2_REPO/rome/rome/0.8/rome-0.8.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.4/servlet-api-2.4.jar"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/email-api"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/dav"/>
+  <classpathentry combineaccessrules="false" kind="src" path="/user-util"/>
+  <classpathentry kind="var" path="M2_REPO/rome/itunes/0.3/itunes-0.3.jar"/>
+  <classpathentry kind="output" path="bin"/>
 </classpath>
