SAK-17432 update, hopefully for the last time.
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@69156 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-app/.project
+++ b/podcasts-app/.project
@@ -2,6 +2,7 @@
   <name>sakai-podcasts</name>
   <comment/>
   <projects>
+    <project>sakai-dav-common</project>
     <project>sakai-podcasts-api</project>
   </projects>
   <buildSpec>
