--- a/podcasts/.project
+++ b/podcasts/.project
@@ -2,6 +2,7 @@
   <name>podcasts</name>
   <comment/>
   <projects>
+    <project>sakai-dav-common</project>
     <project>sakai-podcasts-api</project>
   </projects>
   <buildSpec>
