--- a/podcasts/pom.xml
+++ b/podcasts/pom.xml
@@ -74,8 +74,8 @@
 <!--org.sakaiprojectsakai-tool-api${sakai.version}-->
 <!--org.sakaiprojectsakai-util${sakai.version}-->
     <dependency>
-      <groupId>org.sakaiproject</groupId>
-      <artifactId>sakai-search-api</artifactId>
+      <groupId>org.sakaiproject.search</groupId>
+      <artifactId>search-api</artifactId>
     </dependency>
 <!--${sakai.spring.groupId}${sakai.spring.artifactId}${sakai.spring.version}jar-->
 <!--org.sakaiprojectsakai-event-api${sakai.version}-->
