--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
   <name>Sakai Podcast Project</name>
   <groupId>org.sakaiproject</groupId>
   <artifactId>podcasts-base</artifactId>
-  <version>2.9-SNAPSHOT</version>
+  <version>2.10-SNAPSHOT</version>
   <packaging>pom</packaging>
   <scm>
-    <connection>scm:svn:https://source.sakaiproject.org/svn/podcasts/branches/sakai-2.9.x</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/podcasts/branches/sakai-2.9.x</developerConnection>
-    <url>https://source.sakaiproject.org/svn/podcasts/branches/sakai-2.9.x</url>
+    <connection>scm:svn:https://source.sakaiproject.org/svn/podcasts/trunk</connection>
+    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/podcasts/trunk</developerConnection>
+    <url>https://source.sakaiproject.org/svn/podcasts/trunk</url>
   </scm>
   <modules>
     <module>help</module>
@@ -30,7 +30,7 @@
       <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-podcasts-impl</artifactId>
-        <version>2.9-SNAPSHOT</version>
+        <version>2.10-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.sakaiproject.jsf</groupId>
