--- a/podcasts/pom.xml
+++ b/podcasts/pom.xml
@@ -62,14 +62,12 @@
     </dependency>
     <!-- Overrides to prevent inclusion as transitive deps, in shared -->
     <dependency>
-      <groupId>javax.servlet</groupId>
+      <groupId>javax.servlet.jsp</groupId>
       <artifactId>jsp-api</artifactId>
-      <version>2.0</version>
     </dependency>
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
-      <version>1.1.1</version>
     </dependency>
     <dependency>
       <groupId>commons-collections</groupId>
