--- a/podcasts-impl/pom.xml
+++ b/podcasts-impl/pom.xml
@@ -52,7 +52,7 @@
     <dependency>
       <groupId>rome</groupId>
       <artifactId>rome</artifactId>
-      <version>1.0</version>
+      <version>1.0-sakai</version>
     </dependency>
     <dependency>
       <groupId>rome</groupId>
