--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+          <groupId>org.sakaiproject</groupId>
+          <artifactId>sakai-podcasts-api</artifactId>
+          <version>${project.version}</version>
+          <scope>provided</scope>
+      </dependency>
+
+      <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-podcasts-impl</artifactId>
         <version>2.9-SNAPSHOT</version>
