SAK-23907 removing references to sakai.*.version so maven dependency management is used instead
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@129660 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,7 @@
       <dependency>
         <groupId>org.sakaiproject</groupId>
         <artifactId>sakai-podcasts-impl</artifactId>
-        <version>2.10-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.sakaiproject.jsf</groupId>
-        <artifactId>jsf-tool-sun</artifactId>
-        <version>${sakai.jsf.version}</version>
-        <type>pom</type>
+        <version>${project.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
